force-app/main/default/objects/Finding__c/fields/ArtifactSnapshot__c.field-meta.xml
<CustomField>
    <fullName>ArtifactSnapshot__c</fullName>
    <description>Parent artifact snapshot</description>
    <label>Artifact Snapshot</label>
    <referenceTo>ArtifactSnapshot__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>