force-app/main/default/objects/Finding__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <description>Code excerpt or XML path showing evidence</description>
    <label>Evidence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>