force-app/main/default/objects/Finding__c/fields/IsBlocking__c.field-meta.xml
<CustomField>
    <fullName>IsBlocking__c</fullName>
    <description>Whether this finding blocks deployment</description>
    <defaultValue>false</defaultValue>
    <label>Is Blocking</label>
    <type>Checkbox</type>
</CustomField>