force-app/main/default/objects/Finding__c/fields/RuleId__c.field-meta.xml
<CustomField>
    <fullName>RuleId__c</fullName>
    <description>Identifier of the rule that generated this finding</description>
    <label>Rule ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>