force-app/main/default/objects/Finding__c/fields/SuggestedAction__c.field-meta.xml
<CustomField>
    <fullName>SuggestedAction__c</fullName>
    <description>Recommended action to resolve the finding</description>
    <label>Suggested Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>