force-app/main/default/objects/Finding__c/fields/VersionDelta__c.field-meta.xml
<CustomField>
    <fullName>VersionDelta__c</fullName>
    <description>Version delta relevant to this finding (e.g., 52→60)</description>
    <label>Version Delta</label>
    <length>20</length>
    <type>Text</type>
</CustomField>